SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/CMS_SEI_File_Scanning_Log__c.object
<CustomObject>
    <fields>
        <fullName>CMS_SEI_Log__c</fullName>
        <description>Log created by SEI Trigger and Scanning Callout and Callback POST Service</description>
        <label>CMS SEI Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContentDocument_Id__c</fullName>
        <description>Scanned ContentVersion&apos;s ContentDocument Id</description>
        <label>ContentDocument Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentVersion_Id__c</fullName>
        <description>Scanned ContentVersion Id</description>
        <label>ContentVersion Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentVersion_Title__c</fullName>
        <description>Scanned ContentVersion Title</description>
        <label>ContentVersion Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SF Callout</fullName>
                </value>
                <value>
                    <fullName>ePOR Callback</fullName>
                </value>
                <value>
                    <fullName>Get File Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Name_for_ePOR__c</fullName>
        <formula>CASESAFEID($Organization.Id) + &apos;_&apos; +  ContentVersion_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Name (for ePOR)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Time__c</fullName>
        <formula>IF(
NOT(ISBLANK( Related_Log__r.CreatedDate)),
( CreatedDate - Related_Log__r.CreatedDate)*24*60*60, NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processing Time (in seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Log</label>
        <referenceTo>CMS_SEI_File_Scanning_Log__c</referenceTo>
        <relationshipLabel>File Scanning Logs (CMS SEI)</relationshipLabel>
        <relationshipName>File_Scanning_Logs_CMS_SEI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ePOR_Response_Request_Body__c</fullName>
        <description>ePOR Response if it is the Callout process and Request Body if it ePOR callback to SF service</description>
        <label>ePOR Response/Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>File Scanning Log (CMS SEI)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>ContentVersion_Title__c</columns>
        <columns>CMS_SEI_Log__c</columns>
        <columns>ePOR_Response_Request_Body__c</columns>
        <columns>ContentVersion_Id__c</columns>
        <columns>ContentDocument_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SL{0}</displayFormat>
        <label>Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Scanning Logs (CMS SEI)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>